z-index is solved with more z-index

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ main {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 4;
 }
 
 .furniture-wrapper a {
